# snowmeth

./: .dockerignore  .gitignore  AGENTS.md  CLI_REFACTORING_PLAN.md  Dockerfile  Makefile  README.md  TESTING_PLAN.md  TODO.md  copy_data.py  debug_improve.py  docker-compose.yml  docker_migrate.py  fix_step9.py  main.py  migrate_chapters.py  migrate_existing_db.py  pyproject.toml  run_api.py  run_api_fixed.py  run_api_simple.py  snowflake.json  snowflake.py  snowmeth.db  snowmeth.db.backup  test_api.py  test_basic.py  test_streaming.py
.snowmeth/: config.json
.snowmeth/stories/: baseball-boy.json  dark-lord.json  flying-house.json  space-dog.json  test-story.json
frontend/: Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App-refactored.tsx  App-simple.tsx  App.tsx  index-simple.css  index.css  main.tsx
junk/: countr.py
scripts/: check-env.sh  restart-dev.sh  start-dev.sh  status-dev.sh  stop-dev.sh
snowmeth/: __init__.py  agents.py  cli.py  config.py  context.py  exceptions.py  pdf_export.py  project.py  project_old.py  renderer.py  storage.py  workflow.py
snowmeth/agents/: __init__.py  base.py  chapter_writer.py  character_charts.py  character_extraction.py  character_synopses.py  compatibility.py  detailed_plot.py  paragraph_expansion.py  plot_expansion.py  scene_breakdown.py  scene_expansion.py  sentence_summary.py  shared_models.py  story_analyzer.py
snowmeth/api/: __init__.py  app.py  app_simple.py  async_storage.py  database.py  (+2 more)
tests/: __init__.py  test_agents.py  test_cli.py  test_project.py
(+34 files in other folders)
