[project]
name = "snowmeth2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "dspy-ai>=2.6.27",
]

[project.scripts]
snowmeth = "snowmeth.cli:cli"

[tool.setuptools]
packages = ["snowmeth"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.uv]
package = true
