[project]
name = "snowmeth2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "click>=8.2.1",
    "dspy-ai>=2.6.27",
    "fastapi>=0.116.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[project.scripts]
snowmeth = "snowmeth.cli:cli"

[tool.setuptools]
packages = ["snowmeth"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.4",
]

[tool.uv]
package = true
